src/test/resources/entity_test/invalid/Employee7.entity


Employee7 { id:integer;  // Unexpected char after '{'

name:string }